<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentComponent.AccountFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/etemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spinner_margin"
        android:background="@drawable/state_edittext"
        android:hint="@string/input_email_user"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/spinner_margin" />

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spinner_margin"
        android:background="@drawable/state_edittext"
        android:hint="@string/input_password_user"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/spinner_margin" />

    <EditText
        android:id="@+id/etname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spinner_margin"
        android:background="@drawable/state_edittext"
        android:hint="@string/input_name_user"
        android:inputType="text"
        android:paddingLeft="@dimen/spinner_margin" />

    <LinearLayout
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button_delete"
        android:orientation="horizontal"
        android:weightSum="3">

        <Spinner
            android:id="@+id/spinnertinh"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:spinnerMode="dropdown"></Spinner>

        <Spinner
            android:id="@+id/spinnerhuyen"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:spinnerMode="dropdown"></Spinner>

        <Spinner
            android:id="@+id/spinnerxa"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:spinnerMode="dropdown"></Spinner>
    </LinearLayout>

    <EditText
        android:id="@+id/etaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spinner_margin"
        android:background="@drawable/state_edittext"
        android:hint="@string/input_address_user"
        android:inputType="text"
        android:paddingLeft="@dimen/spinner_margin" />

    <EditText
        android:id="@+id/etphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spinner_margin"
        android:background="@drawable/state_edittext"
        android:hint="@string/input_phone_user"
        android:inputType="phone"
        android:paddingLeft="@dimen/spinner_margin" />

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/btsignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/food_item_margin"
        android:background="@drawable/state_button"
        android:text="@string/login"
        android:textColor="@color/white" />

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/btsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/food_item_margin"
        android:background="@drawable/state_button"
        android:text="@string/signup"
        android:textColor="@color/white" />

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/btsignout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/food_item_margin"
        android:background="@drawable/state_button"
        android:text="@string/logout"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/text_signup"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_item" />

    <TextView
        android:id="@+id/tvsignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/text_signin"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_item" />

</LinearLayout>