<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/food_item_margin"
    android:background="#fff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivclose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_close" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/with_button_delete"
        android:layout_height="@dimen/with_button_delete"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:src="@drawable/ic_cart_active" />

    <TextView
        android:id="@+id/tvnameproduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name_product"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_title_bill" />

    <TextView
        android:id="@+id/tvdetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/detail"
        android:textSize="@dimen/text_size_small_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btclose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:text="@string/close"
            android:textColor="@android:color/holo_orange_dark" />

        <Button
            android:id="@+id/btaddcart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/add_to_cart"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>